# cpp-task-cli

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  cpp-task-cli.md
.cursor/: rules.md
.cursor/skills/cpp-task-cli-senior/: SKILL.md
.cursor/skills/experimental/: SKILL.md
docs/: agent-build.md  agent-tests.md
src/: ReplLogic.cpp  ReplLogic.hpp  Task.cpp  Task.hpp  main.cpp
tests/: .clang-tidy  test_repl.cpp  test_task.cpp
